fix html and body overflow when animating their chlidren

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@
 html {
   font-family: var(--font-primary);
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 * {
@@ -30,6 +31,7 @@ html {
 body {
   background-color: var(--color-body-bg);
   color: var(--color-white);
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
